--- a/index.html
+++ b/index.html
@@ -161,6 +161,70 @@
                     </div>
                   </div>
                 </div>
+
+                <div class="row">
+                  <div class="education padd-15">
+                    <h3 class="title">Education</h3>
+                    <div class="row">
+                      <div class="timeline-box padd-15">
+                        <div class="timeline shadow-dark">
+                          <!-- Timeline Item -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h6 class="timeline-date">
+                              <i class="fa fa-calendar"></i>2015 - 2019
+                            </h6>
+                            <h4 class="timeline-title">
+                              Bachelor in Software Engineering
+                            </h4>
+                            <p class="timeline-text">
+                              The degree equips the students with technical,
+                              theoretical and practical knowledge of the
+                              fundamentals of computer systems and programming
+                              languages
+                            </p>
+                          </div>
+                          <!-- Timeline Item End-->
+                          <!-- Timeline Item -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h6 class="timeline-date">
+                              <i class="fa fa-calendar"></i>2013 - 2015
+                            </h6>
+                            <h4 class="timeline-title">
+                              InterMediate in Computer Science
+                            </h4>
+                            <p class="timeline-text">
+                              The degree equips the students with technical,
+                              theoretical and practical knowledge of the
+                              fundamentals of computer systems and programming
+                              languages
+                            </p>
+                          </div>
+                          <!-- Timeline Item End-->
+                          <!-- Timeline Item -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h6 class="timeline-date">
+                              <i class="fa fa-calendar"></i>2011 - 2013
+                            </h6>
+                            <h4 class="timeline-title">Matric</h4>
+                            <p class="timeline-text">
+                              The degree equips the students with technical,
+                              theoretical and practical knowledge of the
+                              fundamentals of computer systems and programming
+                              languages
+                            </p>
+                          </div>
+                          <!-- Timeline Item End-->
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="experience padd-15">
+                    <h3 class="title">Experience</h3>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
