--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!-- Home Section End -->
 
         <!-- About Section -->
-        <section class="about section">
+        <section class="about section hidden">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -223,6 +223,59 @@
                   </div>
                   <div class="experience padd-15">
                     <h3 class="title">Experience</h3>
+                    <div class="row">
+                      <div class="timeline-box padd-15">
+                        <div class="timeline shadow-dark">
+                          <!-- Timeline Item -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h6 class="timeline-date">
+                              <i class="fa fa-calendar"></i>2019 - 2020
+                            </h6>
+                            <h4 class="timeline-title">
+                              Full Stack Web Developer
+                            </h4>
+                            <p class="timeline-text">
+                              The degree equips the students with technical,
+                              theoretical and practical knowledge of the
+                              fundamentals of computer systems and programming
+                              languages
+                            </p>
+                          </div>
+                          <!-- Timeline Item End-->
+                          <!-- Timeline Item -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h6 class="timeline-date">
+                              <i class="fa fa-calendar"></i>2018 - 2019
+                            </h6>
+                            <h4 class="timeline-title">Backend Developer</h4>
+                            <p class="timeline-text">
+                              The degree equips the students with technical,
+                              theoretical and practical knowledge of the
+                              fundamentals of computer systems and programming
+                              languages
+                            </p>
+                          </div>
+                          <!-- Timeline Item End-->
+                          <!-- Timeline Item -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h6 class="timeline-date">
+                              <i class="fa fa-calendar"></i>2017 - 2018
+                            </h6>
+                            <h4 class="timeline-title">Frontend Developer</h4>
+                            <p class="timeline-text">
+                              The degree equips the students with technical,
+                              theoretical and practical knowledge of the
+                              fundamentals of computer systems and programming
+                              languages
+                            </p>
+                          </div>
+                          <!-- Timeline Item End-->
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -230,6 +283,98 @@
           </div>
         </section>
         <!-- About Section End -->
+
+        <!-- Services Section -->
+        <section class="service section">
+          <div class="container">
+            <div class="row">
+              <div class="section-title padd-15">
+                <h2>Services</h2>
+              </div>
+            </div>
+            <div class="row">
+              <!-- Service Item -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon"><i class="fa fa-laptop"></i></div>
+                  <h4>Web Design</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Recusandae, omnis earum molestias possimus cupiditate
+                    reprehenderit!
+                  </p>
+                </div>
+              </div>
+              <!-- Service Item End-->
+              <!-- Service Item -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon"><i class="fa fa-photo"></i></div>
+                  <h4>Photography</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Recusandae, omnis earum molestias possimus cupiditate
+                    reprehenderit!
+                  </p>
+                </div>
+              </div>
+              <!-- Service Item End-->
+              <!-- Service Item -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon"><i class="fa fa-code"></i></div>
+                  <h4>Web Development</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Recusandae, omnis earum molestias possimus cupiditate
+                    reprehenderit!
+                  </p>
+                </div>
+              </div>
+              <!-- Service Item End-->
+              <!-- Service Item -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon"><i class="fa fa-film"></i></div>
+                  <h4>Video Editing</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Recusandae, omnis earum molestias possimus cupiditate
+                    reprehenderit!
+                  </p>
+                </div>
+              </div>
+              <!-- Service Item End-->
+              <!-- Service Item -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon"><i class="fa fa-rocket"></i></div>
+                  <h4>SEO Optimization</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Recusandae, omnis earum molestias possimus cupiditate
+                    reprehenderit!
+                  </p>
+                </div>
+              </div>
+              <!-- Service Item End-->
+              <!-- Service Item -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon"><i class="fa fa-paint-brush"></i></div>
+                  <h4>Logo Design</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Recusandae, omnis earum molestias possimus cupiditate
+                    reprehenderit!
+                  </p>
+                </div>
+              </div>
+              <!-- Service Item End-->
+            </div>
+          </div>
+        </section>
+        <!-- Services Section End -->
       </div>
       <!-- Main Content End -->
     </div>
