--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   <div class="about-text padd-15">
                     <h3>I'm Umer Hayat a <span>Web Developer</span></h3>
                     <p>
-                      Hi! My name is Umer Hayat, I am a WEb developer, I'm very
+                      Hi! My name is Umer Hayat, I am a Web developer, I'm very
                       passionate and dedicated to my work. With 3 years
                       experience as a Web Developer, I have acquired the skills
                       and knoledge necessary to make your project a success.I
@@ -285,7 +285,7 @@
         <!-- About Section End -->
 
         <!-- Services Section -->
-        <section class="service section">
+        <section class="service section hidden">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -375,10 +375,167 @@
           </div>
         </section>
         <!-- Services Section End -->
+
+        <!-- Portfolio Section -->
+        <section class="portfolio section">
+          <div class="container">
+            <div class="row">
+              <div class="section-title padd-15">
+                <h2>Portfolio</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="portfolio-filter padd-15">
+                <button type="button" class="active" data-filter="all">
+                  All
+                </button>
+                <button type="button" data-filter="web-design">
+                  Web Design
+                </button>
+                <button type="button" data-filter="photography">
+                  Photography
+                </button>
+                <button type="button" data-filter="wordpress">Wordpress</button>
+              </div>
+            </div>
+            <div class="row">
+              <!-- Portfolio Item -->
+              <div class="portfolio-item padd-15" data-category="web-design">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="images/portfolio/Smart Assistent.png"
+                      alt="portfolio"
+                    />
+                  </div>
+                  <div class="portfolio-info">
+                    <h4>Web Design</h4>
+                    <div class="icon">
+                      <i class="fa fa-search"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Portfolio Item End-->
+              <!-- Portfolio Item -->
+              <div class="portfolio-item padd-15" data-category="web-design">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="images/portfolio/Search Product.png"
+                      alt="portfolio"
+                    />
+                  </div>
+                  <div class="portfolio-info">
+                    <h4>Web Design</h4>
+                    <div class="icon">
+                      <i class="fa fa-search"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Portfolio Item End-->
+              <!-- Portfolio Item -->
+              <div class="portfolio-item padd-15" data-category="web-design">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="images/portfolio/Crowd Based Data Platform.png"
+                      alt="portfolio"
+                    />
+                  </div>
+                  <div class="portfolio-info">
+                    <h4>Web Design</h4>
+                    <div class="icon">
+                      <i class="fa fa-search"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Portfolio Item End-->
+              <!-- Portfolio Item -->
+              <div class="portfolio-item padd-15" data-category="web-design">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="images/portfolio/CMS HOME PAGE.png"
+                      alt="portfolio"
+                    />
+                  </div>
+                  <div class="portfolio-info">
+                    <h4>Web Design</h4>
+                    <div class="icon">
+                      <i class="fa fa-search"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Portfolio Item End-->
+              <!-- Portfolio Item -->
+              <div class="portfolio-item padd-15" data-category="web-design">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="images/portfolio/Smart Assistentst.png"
+                      alt="portfolio"
+                    />
+                  </div>
+                  <div class="portfolio-info">
+                    <h4>Web Design</h4>
+                    <div class="icon">
+                      <i class="fa fa-search"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Portfolio Item End-->
+              <!-- Portfolio Item -->
+              <div class="portfolio-item padd-15" data-category="web-design">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="images/portfolio/SWEETS ALLEY.png"
+                      alt="portfolio"
+                    />
+                  </div>
+                  <div class="portfolio-info">
+                    <h4>Web Design</h4>
+                    <div class="icon">
+                      <i class="fa fa-search"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Portfolio Item End-->
+            </div>
+          </div>
+        </section>
+        <!-- Portfolio Section End -->
       </div>
       <!-- Main Content End -->
     </div>
 
     <!-- Main Container End -->
+
+    <!-- Light Box -->
+    <div class="lightbox">
+      <div class="lightbox-content">
+        <div class="lightbox-close">&times;</div>
+        <img
+          src="images/portfolio/SWEETS ALLEY.png"
+          class="lightbox-img"
+          alt="Portfolio"
+        />
+        <div class="lightbox-caption">
+          <div class="caption-text">Web Design</div>
+          <div class="caption-counter">1 of 6</div>
+        </div>
+      </div>
+      <div class="lightbox-controls">
+        <div class="prev-item"><i class="fa fa-angle-left"></i></div>
+        <div class="next-item"><i class="fa fa-angle-right"></i></div>
+      </div>
+    </div>
+    <!-- Light Box End -->
   </body>
 </html>
