--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         <!-- Services Section End -->
 
         <!-- Portfolio Section -->
-        <section class="portfolio section">
+        <section class="portfolio section hidden">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -454,7 +454,7 @@
               </div>
               <!-- Portfolio Item End-->
               <!-- Portfolio Item -->
-              <div class="portfolio-item padd-15" data-category="web-design">
+              <div class="portfolio-item padd-15" data-category="photography">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <img
@@ -463,7 +463,7 @@
                     />
                   </div>
                   <div class="portfolio-info">
-                    <h4>Web Design</h4>
+                    <h4>Photography</h4>
                     <div class="icon">
                       <i class="fa fa-search"></i>
                     </div>
@@ -472,7 +472,7 @@
               </div>
               <!-- Portfolio Item End-->
               <!-- Portfolio Item -->
-              <div class="portfolio-item padd-15" data-category="web-design">
+              <div class="portfolio-item padd-15" data-category="wordpress">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <img
@@ -481,7 +481,7 @@
                     />
                   </div>
                   <div class="portfolio-info">
-                    <h4>Web Design</h4>
+                    <h4>Wordpress</h4>
                     <div class="icon">
                       <i class="fa fa-search"></i>
                     </div>
@@ -490,7 +490,7 @@
               </div>
               <!-- Portfolio Item End-->
               <!-- Portfolio Item -->
-              <div class="portfolio-item padd-15" data-category="web-design">
+              <div class="portfolio-item padd-15" data-category="wordpress">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <img
@@ -499,7 +499,7 @@
                     />
                   </div>
                   <div class="portfolio-info">
-                    <h4>Web Design</h4>
+                    <h4>Wordpress</h4>
                     <div class="icon">
                       <i class="fa fa-search"></i>
                     </div>
@@ -511,6 +511,82 @@
           </div>
         </section>
         <!-- Portfolio Section End -->
+
+        <!-- Blog Section -->
+        <section class="Blog section">
+          <div class="container">
+            <div class="row">
+              <div class="section-title padd-15">
+                <h2>Latest Blogs</h2>
+              </div>
+            </div>
+            <div class="row">
+              <!-- Blog Item -->
+              <div class="blog-item padd-15">
+                <div class="blog-item-inner">
+                  <div class="blog-img">
+                    <img src="images/blogs/1.jpg" alt="blog" />
+                    <div class="blog-date">4 Aug 2020</div>
+                  </div>
+                  <div class="blog-info">
+                    <h4 class="blog-title">Responsive Web Design</h4>
+                    <p class="blog-discription">
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Commodi maiores officia cumque, tenetur explicabo nostrum.
+                    </p>
+                    <p class="blog-tags">
+                      Tags : <a href="#">HTML</a> , <a href="#">CSS</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!-- Blog Item End -->
+
+              <!-- Blog Item -->
+              <div class="blog-item padd-15">
+                <div class="blog-item-inner">
+                  <div class="blog-img">
+                    <img src="images/blogs/1.jpg" alt="blog" />
+                    <div class="blog-date">4 Aug 2020</div>
+                  </div>
+                  <div class="blog-info">
+                    <h4 class="blog-title">Creative Slideshow</h4>
+                    <p class="blog-discription">
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Commodi maiores officia cumque, tenetur explicabo nostrum.
+                    </p>
+                    <p class="blog-tags">
+                      Tags : <a href="#">HTML</a> , <a href="#">CSS</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!-- Blog Item End -->
+
+              <!-- Blog Item -->
+              <div class="blog-item padd-15">
+                <div class="blog-item-inner">
+                  <div class="blog-img">
+                    <img src="images/blogs/1.jpg" alt="blog" />
+                    <div class="blog-date">4 Aug 2020</div>
+                  </div>
+                  <div class="blog-info">
+                    <h4 class="blog-title">Image Gallery LightBox</h4>
+                    <p class="blog-discription">
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Commodi maiores officia cumque, tenetur explicabo nostrum.
+                    </p>
+                    <p class="blog-tags">
+                      Tags : <a href="#">HTML</a> , <a href="#">CSS</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!-- Blog Item End -->
+            </div>
+          </div>
+        </section>
+        <!-- Blog Section End -->
       </div>
       <!-- Main Content End -->
     </div>
@@ -522,20 +598,28 @@
       <div class="lightbox-content">
         <div class="lightbox-close">&times;</div>
         <img
-          src="images/portfolio/SWEETS ALLEY.png"
+          src="images/portfolio/Smart Assistent.png"
+          onclick="nextItem()"
           class="lightbox-img"
           alt="Portfolio"
         />
         <div class="lightbox-caption">
-          <div class="caption-text">Web Design</div>
-          <div class="caption-counter">1 of 6</div>
+          <div class="caption-text"></div>
+          <div class="caption-counter"></div>
         </div>
       </div>
       <div class="lightbox-controls">
-        <div class="prev-item"><i class="fa fa-angle-left"></i></div>
-        <div class="next-item"><i class="fa fa-angle-right"></i></div>
+        <div class="prev-item" onclick="prevItem()">
+          <i class="fa fa-angle-left"></i>
+        </div>
+        <div class="next-item" onclick="nextItem()">
+          <i class="fa fa-angle-right"></i>
+        </div>
       </div>
     </div>
     <!-- Light Box End -->
+
+    <!-- Javascript -->
+    <script src="js/script.js"></script>
   </body>
 </html>
