adding Blog section

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
         <!-- Portfolio Section End -->
 
         <!-- Blog Section -->
-        <section class="Blog section">
+        <section class="blog section hidden">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -523,7 +523,7 @@
             <div class="row">
               <!-- Blog Item -->
               <div class="blog-item padd-15">
-                <div class="blog-item-inner">
+                <div class="blog-item-inner shadow-dark">
                   <div class="blog-img">
                     <img src="images/blogs/1.jpg" alt="blog" />
                     <div class="blog-date">4 Aug 2020</div>
@@ -544,7 +544,7 @@
 
               <!-- Blog Item -->
               <div class="blog-item padd-15">
-                <div class="blog-item-inner">
+                <div class="blog-item-inner shadow-dark">
                   <div class="blog-img">
                     <img src="images/blogs/1.jpg" alt="blog" />
                     <div class="blog-date">4 Aug 2020</div>
@@ -565,7 +565,7 @@
 
               <!-- Blog Item -->
               <div class="blog-item padd-15">
-                <div class="blog-item-inner">
+                <div class="blog-item-inner shadow-dark">
                   <div class="blog-img">
                     <img src="images/blogs/1.jpg" alt="blog" />
                     <div class="blog-date">4 Aug 2020</div>
@@ -587,6 +587,18 @@
           </div>
         </section>
         <!-- Blog Section End -->
+
+        <!-- Contact Section -->
+        <section class="contact section">
+          <div class="container">
+            <div class="row">
+              <div class="section-title padd-15">
+                <h2>Contact</h2>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Contact Section End -->
       </div>
       <!-- Main Content End -->
     </div>
