adding contact section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <!-- Main Content -->
       <div class="maim-content">
         <!-- Home Section -->
-        <section class="home section hidden">
+        <section class="home section">
           <div class="container">
             <div class="intro">
               <img
@@ -71,7 +71,7 @@
         <!-- Home Section End -->
 
         <!-- About Section -->
-        <section class="about section hidden">
+        <section class="about section">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -285,7 +285,7 @@
         <!-- About Section End -->
 
         <!-- Services Section -->
-        <section class="service section hidden">
+        <section class="service section">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -377,7 +377,7 @@
         <!-- Services Section End -->
 
         <!-- Portfolio Section -->
-        <section class="portfolio section hidden">
+        <section class="portfolio section">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -513,7 +513,7 @@
         <!-- Portfolio Section End -->
 
         <!-- Blog Section -->
-        <section class="blog section hidden">
+        <section class="blog section">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -593,9 +593,92 @@
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
-                <h2>Contact</h2>
+                <h2>Contact Me</h2>
               </div>
             </div>
+            <div class="row">
+              <!-- Contant info item -->
+              <div class="contact-info-item padd-15">
+                <div class="icon">
+                  <i class="fa fa-phone"></i>
+                  <h4>Call Me On</h4>
+                  <p>+92 307 4779876</p>
+                </div>
+              </div>
+              <!-- Contant info item End -->
+              <!-- Contant info item -->
+              <div class="contact-info-item padd-15">
+                <div class="icon">
+                  <i class="fa fa-map-marker"></i>
+                  <h4>Office</h4>
+                  <p>Kharian, Punjab Pakistan</p>
+                </div>
+              </div>
+              <!-- Contant info item End -->
+              <!-- Contant info item -->
+              <div class="contact-info-item padd-15">
+                <div class="icon">
+                  <i class="fa fa-envelope"></i>
+                  <h4>Email</h4>
+                  <p>umerhayat520@gmail.com</p>
+                </div>
+              </div>
+              <!-- Contant info item End -->
+            </div>
+
+            <!-- Contact Form -->
+            <div class="row">
+              <div class="contact-form padd-15">
+                <div class="row">
+                  <div class="form-item col-6 padd-15">
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Nmae*"
+                      />
+                    </div>
+                  </div>
+                  <div class="form-item col-6 padd-15">
+                    <div class="form-group">
+                      <input
+                        type="email"
+                        class="form-control"
+                        placeholder="Email*"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="form-item col-12 padd-15">
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Subject*"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="form-item col-12 padd-15">
+                    <div class="form-group">
+                      <textarea
+                        type="text"
+                        class="form-control"
+                        placeholder="Your Message..."
+                      ></textarea>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12 padd-15">
+                    <button type="submit" class="btn">Send Message</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Contact Form End-->
           </div>
         </section>
         <!-- Contact Section End -->
