--- a/index.html
+++ b/index.html
@@ -6,6 +6,45 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/skins/pink.css" />
+
+    <!-- Live Style Switcher -->
+
+    <link
+      rel="stylesheet"
+      class="alternate-style"
+      title="pink"
+      href="css/skins/pink.css"
+      disabled
+    />
+    <link
+      rel="stylesheet"
+      class="alternate-style"
+      title="blue"
+      href="css/skins/blue.css"
+      disabled
+    />
+    <link
+      rel="stylesheet"
+      class="alternate-style"
+      title="orange"
+      href="css/skins/orange.css"
+      disabled
+    />
+    <link
+      rel="stylesheet"
+      class="alternate-style"
+      title="yellow"
+      href="css/skins/yellow.css"
+      disabled
+    />
+    <link
+      rel="stylesheet"
+      class="alternate-style"
+      title="green"
+      href="css/skins/green.css"
+      disabled
+    />
+    <link rel="stylesheet" href="css/styleSwitcher.css" />
   </head>
   <body>
     <!-- Main Container -->
@@ -42,6 +81,7 @@
             <a href="#"><i class="fa fa-comments"></i> Contact</a>
           </li>
         </ul>
+
         <!-- CopyRight -->
         <div class="copyright-text">&copy; All Rights Reserved</div>
       </div>
@@ -713,6 +753,74 @@
       </div>
     </div>
     <!-- Light Box End -->
+
+    <!-- Style Switcher -->
+    <div class="style-switcher">
+      <div class="toggle-style-switcher">
+        <i class="fa fa-cog fa-spin"></i>
+      </div>
+      <h5>Style Switcher</h5>
+      <ul>
+        <li>
+          <a
+            href="javascript:void(0);"
+            title="pink"
+            style="background-color: #ec1839"
+            onclick="setActiveStyle('pink')"
+          ></a>
+        </li>
+        <li>
+          <a
+            href="javascript:void(0);"
+            title="blue"
+            style="background-color: #2196f3"
+            onclick="setActiveStyle('blue')"
+          ></a>
+        </li>
+        <li>
+          <a
+            href="javascript:void(0);"
+            title="orange"
+            style="background-color: #fa5b0f"
+            onclick="setActiveStyle('orange')"
+          ></a>
+        </li>
+        <li>
+          <a
+            href="javascript:void(0);"
+            title="yellow"
+            style="background-color: #ffb400"
+            onclick="setActiveStyle('yellow')"
+          ></a>
+        </li>
+        <li>
+          <a
+            href="javascript:void(0);"
+            title="green"
+            style="background-color: #72b626"
+            onclick="setActiveStyle('green')"
+          ></a>
+        </li>
+      </ul>
+      <h5>Body Skin</h5>
+      <label>
+        <input
+          type="radio"
+          class="body-skin"
+          name="body-style"
+          value="light"
+          checked
+        />
+        Light
+      </label>
+      <label>
+        <input type="radio" class="body-skin" name="body-style" value="dark" />
+        Dark
+      </label>
+    </div>
+    <!-- Style Switcher End -->
+    <!-- Style Switcher Js -->
+    <script src="js/styleSwitcher.js"></script>
 
     <!-- Javascript -->
     <script src="js/script.js"></script>
