--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
                 <div class="row">
                   <div class="personal-info padd-15">
                     <div class="row">
-                      <div class="info-item padd-15">
+                      <!-- <div class="info-item padd-15">
                         <p>Birthday : <span>8 Aug 1998</span></p>
                       </div>
                       <div class="info-item padd-15">
                         <p>Age : <span>22</span></p>
-                      </div>
+                      </div> -->
                       <div class="info-item padd-15">
                         <p>Website : <span>www.domain.com</span></p>
                       </div>
