--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
         <!-- Nav -->
         <ul class="nav">
           <li>
-            <a href="#" class="active"><i class="fa fa-home"></i> Home</a>
+            <a href="#home" class="active"><i class="fa fa-home"></i> Home</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-user"></i> About</a>
+            <a href="#about"><i class="fa fa-user"></i> About</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-list"></i> Services</a>
+            <a href="#services"><i class="fa fa-list"></i> Services</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-briefcase"></i> Portfolio</a>
+            <a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-envelope"></i> Blog</a>
+            <a href="#blogs"><i class="fa fa-envelope"></i> Blog</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-comments"></i> Contact</a>
+            <a href="#contact"><i class="fa fa-comments"></i> Contact</a>
           </li>
         </ul>
 
@@ -89,7 +89,7 @@
       <!-- Main Content -->
       <div class="maim-content">
         <!-- Home Section -->
-        <section class="home section">
+        <section class="home section active" id="home">
           <div class="container">
             <div class="intro">
               <img
@@ -111,7 +111,7 @@
         <!-- Home Section End -->
 
         <!-- About Section -->
-        <section class="about section">
+        <section class="about section" id="about">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -325,7 +325,7 @@
         <!-- About Section End -->
 
         <!-- Services Section -->
-        <section class="service section">
+        <section class="service section" id="services">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -417,7 +417,7 @@
         <!-- Services Section End -->
 
         <!-- Portfolio Section -->
-        <section class="portfolio section">
+        <section class="portfolio section" id="portfolio">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -553,7 +553,7 @@
         <!-- Portfolio Section End -->
 
         <!-- Blog Section -->
-        <section class="blog section">
+        <section class="blog section" id="blogs">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -629,7 +629,7 @@
         <!-- Blog Section End -->
 
         <!-- Contact Section -->
-        <section class="contact section">
+        <section class="contact section" id="contact">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
