--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
     <link rel="stylesheet" href="css/styleSwitcher.css" />
   </head>
   <body>
+    <!-- Preloader -->
+    <div class="preloader">
+      <div class="loader"></div>
+    </div>
+    <!-- Preloader End -->
+
     <!-- Main Container -->
 
     <div class="main-container">
