fixing humburg error

--- a/index.html
+++ b/index.html
@@ -58,39 +58,43 @@
     <div class="main-container">
       <!-- Aside -->
       <div class="aside">
-        <!-- Logo -->
-        <div class="logo">
-          <a href="#">Umer</a>
-        </div>
         <!-- Nav Toggler btn -->
         <div class="nav-toggler">
           <span></span>
         </div>
-        <!-- Nav -->
-        <ul class="nav">
-          <li>
-            <a href="#home" class="active"><i class="fa fa-home"></i> Home</a>
-          </li>
-          <li>
-            <a href="#about"><i class="fa fa-user"></i> About</a>
-          </li>
-          <li>
-            <a href="#services"><i class="fa fa-list"></i> Services</a>
-          </li>
-          <li>
-            <a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio</a>
-          </li>
-          <li>
-            <a href="#blogs"><i class="fa fa-envelope"></i> Blog</a>
-          </li>
-          <li>
-            <a href="#contact"><i class="fa fa-comments"></i> Contact</a>
-          </li>
-        </ul>
+        <div class="aside-inner">
+          <!-- Logo -->
+          <div class="logo">
+            <a href="#">Umer</a>
+          </div>
 
-        <!-- CopyRight -->
-        <div class="copyright-text">&copy; All Rights Reserved</div>
+          <!-- Nav -->
+          <ul class="nav">
+            <li>
+              <a href="#home" class="active"><i class="fa fa-home"></i> Home</a>
+            </li>
+            <li>
+              <a href="#about"><i class="fa fa-user"></i> About</a>
+            </li>
+            <li>
+              <a href="#services"><i class="fa fa-list"></i> Services</a>
+            </li>
+            <li>
+              <a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio</a>
+            </li>
+            <li>
+              <a href="#blogs"><i class="fa fa-envelope"></i> Blog</a>
+            </li>
+            <li>
+              <a href="#contact"><i class="fa fa-comments"></i> Contact</a>
+            </li>
+          </ul>
+
+          <!-- CopyRight -->
+          <div class="copyright-text">&copy; All Rights Reserved</div>
+        </div>
       </div>
+
       <!-- Aside End -->
       <!-- Main Content -->
       <div class="maim-content">
