--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="container">
             <div class="intro">
               <img
-                src="images/profile1.jpg"
+                src="images/profile.webp"
                 alt="profile"
                 class="shadow-dark"
               />
