adding react portfolio

--- a/index.html
+++ b/index.html
@@ -450,6 +450,7 @@
                 <button type="button" data-filter="photography">
                   Photography
                 </button>
+                <button type="button" data-filter="react">React</button>
                 <button type="button" data-filter="wordpress">Wordpress</button>
               </div>
             </div>
@@ -519,6 +520,36 @@
                   </div>
                   <div class="portfolio-info">
                     <h4>Photography</h4>
+                    <div class="icon">
+                      <i class="fa fa-search"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Portfolio Item End-->
+              <!-- Portfolio Item -->
+              <div class="portfolio-item padd-15" data-category="react">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img src="images/portfolio/react1.png" alt="portfolio" />
+                  </div>
+                  <div class="portfolio-info">
+                    <h4>React</h4>
+                    <div class="icon">
+                      <i class="fa fa-search"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Portfolio Item End-->
+              <!-- Portfolio Item -->
+              <div class="portfolio-item padd-15" data-category="react">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img src="images/portfolio/react2.png" alt="portfolio" />
+                  </div>
+                  <div class="portfolio-info">
+                    <h4>React</h4>
                     <div class="icon">
                       <i class="fa fa-search"></i>
                     </div>
