adding social links

--- a/index.html
+++ b/index.html
@@ -110,10 +110,22 @@
               <h1>Umer Hayat</h1>
               <p>I'm a Web Developer</p>
               <div class="social-links">
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="https://github.com/Umer-Hayat" target="blank"
+                  ><i class="fa fa-github"></i
+                ></a>
+                <a
+                  href="https://www.linkedin.com/in/umer-hayat-026104187/"
+                  target="blank"
+                  ><i class="fa fa-linkedin"></i
+                ></a>
+                <a
+                  href="https://www.facebook.com/profile.php?id=100010627395127"
+                  target="blank"
+                  ><i class="fa fa-facebook"></i
+                ></a>
+                <a href="https://twitter.com/umerhayat520" target="blank"
+                  ><i class="fa fa-twitter"></i
+                ></a>
               </div>
             </div>
           </div>
