adding link to email

--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                 <div class="icon">
                   <i class="fa fa-phone"></i>
                   <h4>Call Me On</h4>
-                  <p>+92 307 4779876</p>
+                  <a href="#"> <p>+92 307 4779876</p></a>
                 </div>
               </div>
               <!-- Contant info item End -->
@@ -718,7 +718,10 @@
                 <div class="icon">
                   <i class="fa fa-envelope"></i>
                   <h4>Email</h4>
-                  <p>umerhayat520@gmail.com</p>
+
+                  <a href="mailto:umerhayat520@gmail.com"
+                    ><p>umerhayat520@gmail.com</p></a
+                  >
                 </div>
               </div>
               <!-- Contant info item End -->
@@ -733,7 +736,7 @@
                       <input
                         type="text"
                         class="form-control"
-                        placeholder="Nmae*"
+                        placeholder="Name*"
                       />
                     </div>
                   </div>
