--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                 <div class="icon">
                   <i class="fa fa-phone"></i>
                   <h4>Call Me On</h4>
-                  <a href="#"> <p>+92 307 4779876</p></a>
+                  <a href="tel:+923074779876"> <p>+92 307 4779876</p></a>
                 </div>
               </div>
               <!-- Contant info item End -->
