adding google map link

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                 <a href="https://twitter.com/umerhayat520" target="blank"
                   ><i class="fa fa-twitter"></i
                 ></a>
+                <a href="#" target="blank"><i class="fa fa-skype"></i></a>
               </div>
             </div>
           </div>
@@ -709,7 +710,12 @@
                 <div class="icon">
                   <i class="fa fa-map-marker"></i>
                   <h4>Office</h4>
-                  <p>Kharian, Punjab Pakistan</p>
+                  <a
+                    href="https://maps.google.com/?q=Chak Sikander no 30 Punjab Pakistan"
+                    target="blank"
+                  >
+                    <p>Chak Sikander no#30, Punjab Pakistan</p></a
+                  >
                 </div>
               </div>
               <!-- Contant info item End -->
