updating media query

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <a href="https://twitter.com/umerhayat520" target="blank"
                   ><i class="fa fa-twitter"></i
                 ></a>
-                <a href="#" target="blank"><i class="fa fa-skype"></i></a>
+                <a href="#"><i class="fa fa-skype"></i></a>
               </div>
             </div>
           </div>
