--- a/index.html
+++ b/index.html
@@ -699,16 +699,23 @@
               <!-- Contant info item -->
               <div class="contact-info-item padd-15">
                 <div class="icon">
-                  <i class="fa fa-phone"></i>
+                  <a href="tel:+923074779876"> <i class="fa fa-phone"></i></a>
                   <h4>Call Me On</h4>
-                  <a href="tel:+923074779876"> <p>+92 307 4779876</p></a>
+                  <a href="tel:+923074779876">
+                    <p>+92 307 4779876</p>
+                  </a>
                 </div>
               </div>
               <!-- Contant info item End -->
               <!-- Contant info item -->
               <div class="contact-info-item padd-15">
                 <div class="icon">
-                  <i class="fa fa-map-marker"></i>
+                  <a
+                    href="https://maps.google.com/?q=Chak Sikander no 30 Punjab Pakistan"
+                    target="blank"
+                  >
+                    <i class="fa fa-map-marker"></i
+                  ></a>
                   <h4>Office</h4>
                   <a
                     href="https://maps.google.com/?q=Chak Sikander no 30 Punjab Pakistan"
@@ -722,7 +729,9 @@
               <!-- Contant info item -->
               <div class="contact-info-item padd-15">
                 <div class="icon">
-                  <i class="fa fa-envelope"></i>
+                  <a href="mailto:umerhayat520@gmail.com">
+                    <i class="fa fa-envelope"></i
+                  ></a>
                   <h4>Email</h4>
 
                   <a href="mailto:umerhayat520@gmail.com"
