updating some data

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                       Hi! My name is Umer Hayat, I am a Web developer, I'm very
                       passionate and dedicated to my work. With 3 years
                       experience as a Web Developer, I have acquired the skills
-                      and knoledge necessary to make your project a success.I
+                      and knowledge necessary to make your project a success.I
                       enjoy every step of the design process, from discussion
                       and collaoration.
                     </p>
@@ -213,6 +213,13 @@
                         </div>
                       </div>
                       <div class="skill-item padd-15">
+                        <h5>Django</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 60%"></div>
+                          <div class="skill-percent">60%</div>
+                        </div>
+                      </div>
+                      <div class="skill-item padd-15">
                         <h5>Bootstrap</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 90%"></div>
@@ -220,7 +227,7 @@
                         </div>
                       </div>
                       <div class="skill-item padd-15">
-                        <h5>CSS</h5>
+                        <h5>HTML & CSS</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 85%"></div>
                           <div class="skill-percent">85%</div>
