--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
               <div class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-photo"></i></div>
-                  <h4>Photography</h4>
+                  <h4>php</h4>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Recusandae, omnis earum molestias possimus cupiditate
@@ -467,14 +467,27 @@
                 <button type="button" data-filter="web-design">
                   Web Design
                 </button>
-                <button type="button" data-filter="photography">
-                  Photography
-                </button>
+                <button type="button" data-filter="php">PHP</button>
                 <button type="button" data-filter="react">React</button>
                 <button type="button" data-filter="wordpress">Wordpress</button>
               </div>
             </div>
             <div class="row">
+              <!-- Portfolio Item -->
+              <div class="portfolio-item padd-15" data-category="web-design">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img src="images/portfolio/inprovo.png" alt="portfolio" />
+                  </div>
+                  <div class="portfolio-info">
+                    <h4>Web Design</h4>
+                    <div class="icon">
+                      <i class="fa fa-search"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Portfolio Item End-->
               <!-- Portfolio Item -->
               <div class="portfolio-item padd-15" data-category="web-design">
                 <div class="portfolio-item-inner shadow-dark">
@@ -530,7 +543,7 @@
               </div>
               <!-- Portfolio Item End-->
               <!-- Portfolio Item -->
-              <div class="portfolio-item padd-15" data-category="photography">
+              <div class="portfolio-item padd-15" data-category="php">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <img
@@ -539,7 +552,7 @@
                     />
                   </div>
                   <div class="portfolio-info">
-                    <h4>Photography</h4>
+                    <h4>php</h4>
                     <div class="icon">
                       <i class="fa fa-search"></i>
                     </div>
