--- a/index.html
+++ b/index.html
@@ -467,9 +467,10 @@
                 <button type="button" data-filter="web-design">
                   Web Design
                 </button>
-                <button type="button" data-filter="php">PHP</button>
                 <button type="button" data-filter="react">React</button>
-                <button type="button" data-filter="wordpress">Wordpress</button>
+                <button type="button" data-filter="php">PHP</button>
+                <button type="button" data-filter="django">Django</button>
+                <!-- <button type="button" data-filter="wordpress">Wordpress</button> -->
               </div>
             </div>
             <div class="row">
@@ -489,7 +490,7 @@
               </div>
               <!-- Portfolio Item End-->
               <!-- Portfolio Item -->
-              <div class="portfolio-item padd-15" data-category="web-design">
+              <div class="portfolio-item padd-15" data-category="php">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <img
@@ -498,7 +499,7 @@
                     />
                   </div>
                   <div class="portfolio-info">
-                    <h4>Web Design</h4>
+                    <h4>PHP</h4>
                     <div class="icon">
                       <i class="fa fa-search"></i>
                     </div>
@@ -507,7 +508,7 @@
               </div>
               <!-- Portfolio Item End-->
               <!-- Portfolio Item -->
-              <div class="portfolio-item padd-15" data-category="web-design">
+              <div class="portfolio-item padd-15" data-category="django">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <img
@@ -516,7 +517,7 @@
                     />
                   </div>
                   <div class="portfolio-info">
-                    <h4>Web Design</h4>
+                    <h4>Django</h4>
                     <div class="icon">
                       <i class="fa fa-search"></i>
                     </div>
@@ -525,7 +526,7 @@
               </div>
               <!-- Portfolio Item End-->
               <!-- Portfolio Item -->
-              <div class="portfolio-item padd-15" data-category="web-design">
+              <div class="portfolio-item padd-15" data-category="django">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <img
@@ -534,7 +535,7 @@
                     />
                   </div>
                   <div class="portfolio-info">
-                    <h4>Web Design</h4>
+                    <h4>Django</h4>
                     <div class="icon">
                       <i class="fa fa-search"></i>
                     </div>
@@ -591,7 +592,7 @@
               </div>
               <!-- Portfolio Item End-->
               <!-- Portfolio Item -->
-              <div class="portfolio-item padd-15" data-category="wordpress">
+              <div class="portfolio-item padd-15" data-category="php">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <img
@@ -600,7 +601,7 @@
                     />
                   </div>
                   <div class="portfolio-info">
-                    <h4>Wordpress</h4>
+                    <h4>PHP</h4>
                     <div class="icon">
                       <i class="fa fa-search"></i>
                     </div>
@@ -609,7 +610,7 @@
               </div>
               <!-- Portfolio Item End-->
               <!-- Portfolio Item -->
-              <div class="portfolio-item padd-15" data-category="wordpress">
+              <div class="portfolio-item padd-15" data-category="php">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <img
@@ -618,7 +619,7 @@
                     />
                   </div>
                   <div class="portfolio-info">
-                    <h4>Wordpress</h4>
+                    <h4>PHP</h4>
                     <div class="icon">
                       <i class="fa fa-search"></i>
                     </div>
