--- a/index.html
+++ b/index.html
@@ -490,6 +490,21 @@
               </div>
               <!-- Portfolio Item End-->
               <!-- Portfolio Item -->
+              <div class="portfolio-item padd-15" data-category="web-design">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img src="images/portfolio/gotlancer.png" alt="portfolio" />
+                  </div>
+                  <div class="portfolio-info">
+                    <h4>Web Design</h4>
+                    <div class="icon">
+                      <i class="fa fa-search"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Portfolio Item End-->
+              <!-- Portfolio Item -->
               <div class="portfolio-item padd-15" data-category="php">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
